--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ repository = "https://github.com/nicholasbishop/atlassian-app-auth"
 
 [dependencies]
 jsonwebtoken = "7.1"
+percent-encoding = "2.1"
 serde = { version = "1.0", features = ["derive"] }
 sha2 = "0.9"
 thiserror = "1.0"
