--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.6.0"
 authors = ["Nicholas Bishop <nicholasbishop@gmail.com>"]
 edition = "2018"
 description = "Library for authenticating as an Atlassian Connect App"
+keywords = ["atlassian", "jira", "jwt"]
 license = "Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/nicholasbishop/atlassian-app-auth"
