--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "atlassian-app-auth"
-version = "0.6.0"
+version = "0.6.1-alpha.0"
 authors = ["Nicholas Bishop <nicholasbishop@gmail.com>"]
 edition = "2018"
 description = "Library for authenticating as an Atlassian Connect App"
