--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,8 @@ serde = { version = "1.0", features = ["derive"] }
 sha2 = "0.9"
 thiserror = "1.0"
 url = "2.1"
+
+[dev-dependencies]
+argh = "0.1"
+reqwest = { version = "0.10", default_features = false, features = ["blocking", "json", "rustls-tls"]}
+serde_json = "1.0"
