--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Nicholas Bishop <nicholasbishop@gmail.com>"]
 edition = "2018"
 description = "Library for authenticating as an Atlassian Connect App"
 keywords = ["atlassian", "jira", "jwt"]
+categories = ["authentication", "web-programming"]
 license = "Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/nicholasbishop/atlassian-app-auth"
