--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,14 +11,14 @@ readme = "README.md"
 repository = "https://github.com/nicholasbishop/atlassian-app-auth"
 
 [dependencies]
-jsonwebtoken = "7.2.0"
-percent-encoding = "2.1.0"
-serde = { version = "1.0.130", features = ["derive"] }
-sha2 = "0.9.6"
-thiserror = "1.0.29"
-url = "2.2.2"
+jsonwebtoken = { version = "7.2.0", default_features = false }
+percent-encoding = { version = "2.1.0", default_features = false }
+serde = { version = "1.0.130", default_features = false, features = ["derive"] }
+sha2 = { version = "0.9.6", default_features = false }
+thiserror = { version = "1.0.29", default_features = false }
+url = { version = "2.2.2", default_features = false }
 
 [dev-dependencies]
-argh = "0.1.6"
+argh = { version = "0.1.6", default_features = false }
 reqwest = { version = "0.11.4", default_features = false, features = ["blocking", "json", "rustls-tls"] }
-serde_json = "1.0.67"
+serde_json = { version = "1.0.67", default_features = false }
