--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "atlassian-app-auth"
-version = "1.0.1-alpha.0"
+version = "1.0.1"
 authors = ["Nicholas Bishop <nicholasbishop@gmail.com>"]
 edition = "2021"
 description = "Library for authenticating as an Atlassian Connect App"
