--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,9 @@
+[badges.maintenance]
+status = "deprecated"
+
 [package]
 name = "atlassian-app-auth"
-version = "1.0.1"
+version = "1.0.2"
 authors = ["Nicholas Bishop <nicholasbishop@gmail.com>"]
 edition = "2021"
 description = "Library for authenticating as an Atlassian Connect App"
